WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
73889
TextCheckingParagraph::offsetTo should not have side effect.
https://bugs.webkit.org/show_bug.cgi?id=73889
Summary
TextCheckingParagraph::offsetTo should not have side effect.
Shinya Kawanaka
Reported
2011-12-05 22:18:35 PST
TextCheckingParagraph::offsetTo changes m_offsetAsRange. That often caused unexpected bugs, especially when changing Editor and SpellChecker. This side effect should be eliminated.
Attachments
Patch
(1.69 KB, patch)
2011-12-05 23:03 PST
,
Shinya Kawanaka
no flags
Details
Formatted Diff
Diff
Patch
(1.67 KB, patch)
2011-12-05 23:27 PST
,
Shinya Kawanaka
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Shinya Kawanaka
Comment 1
2011-12-05 23:03:40 PST
Created
attachment 117994
[details]
Patch
Hajime Morrita
Comment 2
2011-12-05 23:09:04 PST
Comment on
attachment 117994
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=117994&action=review
> Source/WebCore/editing/TextCheckingHelper.cpp:161 > + if (ec)
I guess this never fail. you can use ASSERT_NO_EXCEPTION.
Shinya Kawanaka
Comment 3
2011-12-05 23:27:25 PST
Created
attachment 117996
[details]
Patch
WebKit Review Bot
Comment 4
2011-12-06 03:24:19 PST
Comment on
attachment 117996
[details]
Patch Clearing flags on attachment: 117996 Committed
r102118
: <
http://trac.webkit.org/changeset/102118
>
WebKit Review Bot
Comment 5
2011-12-06 03:24:23 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug