https://bugs.webkit.org/show_bug.cgi?id=73889 TextCheckingParagraph::offsetTo should not have a side effect.

Patch by Shinya Kawanaka <shinyak@google.com> on 2011-12-06
Reviewed by Hajime Morita.

Since TextCheckingParagraph::offsetTo had a side effect, its cache often became inconsistent.
This is likely to cause a bug when changing SpellChecker and Editor.

No new tests. Covered by existing tests.

* editing/TextCheckingHelper.cpp:
(WebCore::TextCheckingParagraph::offsetTo):

Canonical link: https://commits.webkit.org/90566@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@102118 268f45cc-cd09-0410-ab3c-d52691b4dbfc